fixed visibility on popups when the main-ui was hidden

--- a/reflexo/src/css/main.css
+++ b/reflexo/src/css/main.css
@@ -44,6 +44,11 @@ body {
     visibility: hidden;
 }
 
+.main-ui.hidden .popup {
+    /*This overrides any visible popups*/
+    visibility: hidden !important;
+}
+
 .main-ui > * {
     --spacing: 20px;
 }
